# pslogger

./: README.md  pyproject.toml  pyrightconfig.json
src/logger_wrapper/: logger.py
src/pslogger/: __init__.py  constants.py  logger.py
src/pslogger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
